--- a/src/facts.css
+++ b/src/facts.css
@@ -1,16 +1,18 @@
-.title {
-  position: absolute;
-  left: 33%;
-  top: 7%;
-  font-size: 2rem;
+.fact_parent {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 
-.facts {
-  position: absolute;
-  padding: 18rem;
-  font-size: 1.7rem;
+.fact_div1 {
+  font-size: 1.1rem;
+  text-align: center;
+  grid-area: 2 / 1 / 3 / 2;
 }
-
-* {
-  font-family: "Montserrat", sans-serif;
+.fact_div2 {
+  padding: 6%;
+  font-size: 1.1rem;
+  grid-area: 4 / 1 / 7 / 2;
 }
