--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+.App {
+  margin-top: 10;
+  margin-bottom: 10;
+  margin-right: 10;
+  margin-left: 10;
+}
+
+.color1 {
+  color: #f4a64f;
+}
+
+.color2 {
+  color: #8bba15;
+}
+
+.color3 {
+  color: #00acc2;
+}
+
 * {
   box-sizing: border-box;
 }
