--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,28 @@
-.App {
+* {
+  background: #1b3150;
+  color: white;
+}
+
+button {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid #ffffff;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.3em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 300;
+  color: #ffffff;
+  text-align: center;
+  transition: all 0.2s;
+}
+
+button:hover {
+  color: #1b3150;
+  background-color: #ffffff;
+}
+
+/* .App {
   margin-top: 10;
   margin-bottom: 10;
   margin-right: 10;
@@ -22,19 +46,19 @@
 }
 
 /* Slideshow container */
-.slideshow-container {
+/* .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
-}
+} */
 
 /* Hide the images by default */
-.mySlides {
+/* .mySlides {
   display: none;
-}
+} */
 
 /* Next & previous buttons */
-.prev,
+/* .prev,
 .next {
   cursor: pointer;
   position: absolute;
@@ -48,22 +72,22 @@
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-}
+} */
 
 /* Position the "next button" to the right */
-.next {
+/* .next {
   right: 0;
   border-radius: 3px 0 0 3px;
-}
+} */
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover,
+/* .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
+  background-color: rgba(0, 0, 0, 0.8); */
+/* } */
 
 /* Caption text */
-.text {
+/* .text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -71,19 +95,19 @@
   bottom: 8px;
   width: 100%;
   text-align: center;
-}
+} */
 
 /* Number text (1/3 etc) */
-.numbertext {
+/* .numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
-}
+} */
 
 /* The dots/bullets/indicators */
-.dot {
+/* .dot {
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -92,15 +116,15 @@
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-}
-
+} */
+/* 
 .active,
 .dot:hover {
   background-color: #717171;
 }
 
 /* Fading animation */
-.fade {
+/* .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
@@ -123,4 +147,4 @@
   to {
     opacity: 1;
   }
-}
+} */
