--- a/src/App.css
+++ b/src/App.css
@@ -22,51 +22,11 @@ button:hover {
   background-color: #ffffff;
 }
 
-.divIn {
-  -webkit-animation: rotateSlideIn 2s both ease;
+.fromRight {
+  text-align: center;
+  -webkit-animation: rotateSlideIn 1.5s both ease;
 
-  animation: rotateSlideIn 2s both ease;
-}
-
-.divOut {
-  -webkit-animation: rotateSlideOut 2s both ease;
-  animation: rotateSlideOut 2s both ease;
-}
-
-@-webkit-keyframes rotateSlideOut {
-  0% {
-  }
-  25% {
-    opacity: 0.5;
-    -webkit-transform: translateZ(-500px);
-  }
-  75% {
-    opacity: 0.5;
-    -webkit-transform: translateZ(-500px) translateX(-200%);
-  }
-  100% {
-    opacity: 0.5;
-    -webkit-transform: translateZ(-500px) translateX(-200%);
-  }
-}
-@keyframes rotateSlideOut {
-  0% {
-  }
-  25% {
-    opacity: 0.5;
-    -webkit-transform: translateZ(-500px);
-    transform: translateZ(-500px);
-  }
-  75% {
-    opacity: 0.5;
-    -webkit-transform: translateZ(-500px) translateX(-200%);
-    transform: translateZ(-500px) translateX(-200%);
-  }
-  100% {
-    opacity: 0.5;
-    -webkit-transform: translateZ(-500px) translateX(-200%);
-    transform: translateZ(-500px) translateX(-200%);
-  }
+  animation: rotateSlideIn 1.5s both ease;
 }
 
 @-webkit-keyframes rotateSlideIn {
@@ -101,4 +61,76 @@ button:hover {
     -webkit-transform: translateZ(0) translateX(0);
     transform: translateZ(0) translateX(0);
   }
-} */
+}
+
+.fromLeft {
+  -webkit-animation: moveFromLeft 1.5s ease both;
+  animation: moveFromLeft 1.5s ease both;
+  text-align: center;
+}
+@-webkit-keyframes moveFromLeft {
+  from {
+    -webkit-transform: translateX(-100%);
+  }
+}
+@keyframes moveFromLeft {
+  from {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+
+.fromDown {
+  -webkit-animation: moveFromBottom 0.6s ease both;
+  animation: moveFromBottom 0.6s ease both;
+}
+@-webkit-keyframes moveFromBottom {
+  from {
+    -webkit-transform: translateY(100%);
+  }
+}
+@keyframes moveFromBottom {
+  from {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+  }
+}
+
+.fromUp {
+  -webkit-animation: moveFromTop 0.6s ease both;
+  animation: moveFromTop 0.6s ease both;
+}
+
+@-webkit-keyframes moveFromTop {
+  from {
+    -webkit-transform: translateY(-100%);
+  }
+}
+@keyframes moveFromTop {
+  from {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+}
+
+.fadeIn {
+  -webkit-animation: fade 2s ease both;
+  animation: fade 2s ease both;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
