--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,19 @@ button:hover {
   background-color: #ffffff;
 }
 
+html {
+  background: url("https://i.gifer.com/7fWl.gif") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+/* body {
+  background-image: url"https://i.gifer.com/7fWl.gif")(;
+} */
 .fromRight {
   text-align: center;
+
   -webkit-animation: rotateSlideIn 1.5s both ease;
 
   animation: rotateSlideIn 1.5s both ease;
